--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
   },
   "action": {
     "default_title": "Summurai",
-    "default_icon": "logo.png",
+    "default_icon": "public/logo.png",
     "default_popup": "summurai.html"
   }
 }
